Develop (#24)
* ROUND 2~

* Update AuthController.java

* Logout

* Update NaverNewsController.java

* gemini

PredictionController 쪽 {} 오타 수정

제미나이 api 적용
버전:gemini-2.5-flash-preview-09-2025

* 네이버 뉴스 ID 추가

가져오는 뉴스를 id로 구분

* Id as Int

* Updated Gemini endpoint

* News Five

* Updated HTML tag removal

* google auth updated

* Update application.properties

* Adding Google OAuth Handling

* sns login

* No Long Use Integer

* Update GoogleUserInfo.java

* Update AuthService.java

* Update AuthService.java

* sns login

* Adding random password

I hope this works...

* Update application.properties

* Update application.properties

* Update application.properties

* sns login

* AuthController fix

* Updated AuthController

* Update PredictionController.java

* Update PredictionController.java

* Update PredictionController.java

* Update PredictionService.java

* Prediction fix

* Update PredictionController.java

* sns login

* Update AuthController.java

* Update AuthService.java

* Update application.properties

* Update AuthService.java

* Update AuthService.java

* Update application.properties

* Update AuthService.java

* Update AuthService.java

* Update AuthService.java

* Update AuthService.java

* Update AuthService.java

* Update AuthService.java

* Update AuthService.java

* No Unique Email

* Update AuthService.java

* sns login

* snslogin

* Admin

* My Channel Id

* Wrong account...

* sns loginlast

* Update AuthService.java

* Gemini Service Updated

* 게시판 기능 선수 응원 댓글로 수정

* Lombok

* Update PlayerEntity.java

* Update BoardController.java

* Update application.properties

* Update LiveYtService.java

* Update LiveYtService.java

* Update FirstApplication.java

* Updated LiveYtService Interval

* Update LiveYtService.java

* Optimizing Quota Usage

* Optimizing Quota usage

Darn

* Adding YouTube Event Subscription

* Fix endpoint(checkToken would be added)

* Update YtSubscriptionService.java

* Opened SecurityConfig, subscribe after ready

* 